--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             font-family: 'Inter', sans-serif;
             background-image: url('./hygge-home_background.png');
             background-size: cover;
-            background-position: left center;
+            background-position: left bottom;
             background-attachment: fixed;
             transition: background-color 0.3s ease;
         }
@@ -83,7 +83,7 @@
 
         <!-- Footer -->
         <div class="mt-8 text-xs text-gray-400">
-            © 2024 Hygge Home
+            © 2023 Hygge Home
         </div>
 
     </div>
