--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <style>
         body {
             font-family: 'Inter', sans-serif;
-            background-image: url('./hygge-home_background.png');
+            background-image: url('./pexels-claudia-schmalz-3928374-13316618.jpg');
             background-size: cover;
             background-position: left bottom;
             background-attachment: fixed;
