--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             font-family: 'Inter', sans-serif;
             background-image: url('./pexels-claudia-schmalz-3928374-13316618.jpg');
             background-size: cover;
-            background-position: left bottom;
+            background-position: centre;
             background-attachment: fixed;
             transition: background-color 0.3s ease;
         }
