--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <body class="flex items-center justify-center min-h-screen p-4">
 
     <!-- Main box for the links -->
-    <div class="w-full max-w-sm p-6 rounded-3xl shadow-xl text-center" style="background-color: rgba(244, 240, 234, 0.9); backdrop-filter: blur(5px);">
+    <div class="w-full max-w-sm p-6 rounded-3xl shadow-xl text-center" style="background-color: rgba(244, 240, 234, 0.7); backdrop-filter: blur(5px);">
 
         <!-- Logo -->
         <div class="flex justify-center mb-6">
@@ -50,7 +50,7 @@
         
         <!-- Info -->
         <p class="text-gray-600 mb-8">
-            Tere tulemast! Siit leiad kõik meie lingid ühest kohast.
+            Tere tulemast! <br> Siit leiad kõik meie lingid ühest kohast.
         </p>
 
         <!-- Link Buttons -->
