--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <style>
         body {
             font-family: 'Inter', sans-serif;
-            background-image: url('./pexels-claudia-schmalz-3928374-13316618.jpg');
+            background-image: url('./images/background.jpg');
             background-size: cover;
             background-position: centre;
             background-attachment: fixed;
@@ -42,7 +42,7 @@
 
         <!-- Logo -->
         <div class="flex justify-center mb-6">
-            <img class="w-48 h-auto shadow-md object-contain" src="./HyggeHomeLogo.png" alt="Hygge Home Logo">
+            <img class="w-48 h-auto shadow-md object-contain" src="./images/HyggeHomeLogo.png" alt="Hygge Home Logo">
         </div>
 
         <!-- Brand name -->
