--- a/index.html
+++ b/index.html
@@ -79,6 +79,24 @@
                 <span>Wolt</span>
             </a>
 
+            <!-- Link 5: Järve Pood -->
+            <a href="https://maps.app.goo.gl/maps.google.com/0" target="_blank" class="flex items-center justify-center w-full px-6 py-4 text-white bg-blue-500 rounded-full shadow-sm hover:bg-blue-600 transition-colors duration-200">
+                <i class="fas fa-map-marker-alt mr-3 text-lg"></i>
+                <span>Järve Pood</span>
+        </a>
+
+            <!-- Link 6: Ülemiste Pood -->
+            <a href="https://maps.app.goo.gl/786LsNJu9mkD5iQD9" target="_blank" class="flex items-center justify-center w-full px-6 py-4 text-white bg-blue-500 rounded-full shadow-sm hover:bg-blue-600 transition-colors duration-200">
+                <i class="fas fa-map-marker-alt mr-3 text-lg"></i>
+                <span>Ülemiste Pood</span>
+            </a>
+
+            <!-- Link 7: Lõunakeskuse Pood -->
+            <a href="https://maps.app.goo.gl/ikvFQt14ekcd936U6" target="_blank" class="flex items-center justify-center w-full px-6 py-4 text-white bg-blue-500 rounded-full shadow-sm hover:bg-blue-600 transition-colors duration-200">
+                <i class="fas fa-map-marker-alt mr-3 text-lg"></i>
+                <span>Lõunakeskuse Pood</span>
+            </a>
+
         </div>
 
         <!-- Footer -->
