--- a/index.html
+++ b/index.html
@@ -80,20 +80,20 @@
             </a>
 
             <!-- Link 5: Järve Pood -->
-            <a href="https://maps.app.goo.gl/CpaZQaE7uuCVA2ev6" target="_blank" class="flex items-center justify-center w-full px-6 py-4 text-white bg-hygge-beige rounded-full shadow-sm hover:bg-gray-500 transition-colors duration-200">
-                <i class="fas fa-map-marker-alt mr-3 text-lg"></i>
+            <a href="https://maps.app.goo.gl/CpaZQaE7uuCVA2ev6" target="_blank" class="flex items-center justify-center w-full px-6 py-4 text-gray-900 bg-stone-200 rounded-full shadow-sm hover:bg-stone-300 transition-colors duration-200">
+                <i class="fas fa-map-marker-alt mr-3 text-gray-900 text-lg"></i>
                 <span>Järve Pood</span>
         </a>
 
             <!-- Link 6: Ülemiste Pood -->
-            <a href="https://maps.app.goo.gl/786LsNJu9mkD5iQD9" target="_blank" class="flex items-center justify-center w-full px-6 py-4 text-white bg-hygge-beige rounded-full shadow-sm hover:bg-gray-500 transition-colors duration-200">
-                <i class="fas fa-map-marker-alt mr-3 text-lg"></i>
+            <a href="https://maps.app.goo.gl/786LsNJu9mkD5iQD9" target="_blank" class="flex items-center justify-center w-full px-6 py-4 text-gray-900 bg-stone-200 rounded-full shadow-sm hover:bg-stone-300 transition-colors duration-200">
+                <i class="fas fa-map-marker-alt mr-3 text-gray-900 text-lg"></i>
                 <span>Ülemiste Pood</span>
             </a>
 
             <!-- Link 7: Lõunakeskuse Pood -->
-            <a href="https://maps.app.goo.gl/ikvFQt14ekcd936U6" target="_blank" class="flex items-center justify-center w-full px-6 py-4 text-white bg-hygge-beige rounded-full shadow-sm hover:bg-gray-500 transition-colors duration-200">
-                <i class="fas fa-map-marker-alt mr-3 text-lg"></i>
+            <a href="https://maps.app.goo.gl/ikvFQt14ekcd936U6" target="_blank" class="flex items-center justify-center w-full px-6 py-4 text-gray-900 bg-stone-200 rounded-full shadow-sm hover:bg-stone-300 transition-colors duration-200">
+                <i class="fas fa-map-marker-alt mr-3 text-gray-900 text-lg"></i>
                 <span>Lõunakeskuse Pood</span>
             </a>
 
