--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             </a>
 
             <!-- Link 5: Järve Pood -->
-            <a href="https://maps.app.goo.gl/CpaZQaE7uuCVA2ev6" target="_blank" class="flex items-center justify-center w-full px-6 py-4 text-gray-900 bg-stone-200 rounded-full shadow-sm hover:bg-stone-300 transition-colors duration-200">
+            <a href="https://maps.app.goo.gl/CpaZQaE7uuCVA2ev6" target="_blank" class="flex items-center justify-center w-full px-6 py-4 text-gray-900 bg-brown-200 rounded-full shadow-sm hover:bg-stone-300 transition-colors duration-200">
                 <i class="fas fa-map-marker-alt mr-3 text-gray-900 text-lg"></i>
                 <span>Järve Pood</span>
         </a>
